Fixes hidden left side of page when on mobile

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -198,3 +198,9 @@ a .project:hover  {
 .group-icon {
   width: 100%;
 }
+
+#main-content {
+  @media (min-width: 320px ) {
+    padding-left: 56px;
+  }
+}
